fix zodiacs not showing on small screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -131,6 +131,6 @@ footer {
     
     .zodiac-img {
         margin: 5px;
-        width: 0%;
+        width: 10%;
     }
 }
